# passfort-wiki-api

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  TASK.md  setup.sh
assets/: wiki.db-shm  wiki.db-wal
assets/data/: documents.csv  revisions.csv
src/: main.rs  routes.rs  schema.rs
src/routes/: test.rs
