[package]
name = "passfort-wiki-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.62"
urlencoding = "2.1.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]
