[package]
name = "passfort-wiki-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.62"
urlencoding = "2.1.0"

# [dependencies.validator]
# version = "0.16.0"
# features = ["derive"]

[dependencies.uuid]
version = "1.1.2"
# version = "0.8.2"
features = ["v4", "serde"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
  # "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
  "uuid",
  "macros"
]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]
